// Vitest Snapshot v1

exports[`lib/notion/add-year > appends blocks in the drop zone based on the year template patterns and year extras > drop-zone-1 1`] = `
{
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "January",
            "text": {
              "content": "January",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 1/1",
            "text": {
              "content": "Sun, 1/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-month-id task",
            "text": {
              "content": "pattern-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Some task",
            "text": {
              "content": "Some task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Some event",
            "text": {
              "content": "Some event",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 1/2",
            "text": {
              "content": "Mon, 1/2",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Another event",
            "text": {
              "content": "Another event",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Thu, 1/5",
            "text": {
              "content": "Thu, 1/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 1/10",
            "text": {
              "content": "Tue, 1/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 1/20",
            "text": {
              "content": "Fri, 1/20",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-date-id task",
            "text": {
              "content": "pattern-multiple-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 1/24",
            "text": {
              "content": "Tue, 1/24",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-month-date-id task",
            "text": {
              "content": "pattern-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "toggle": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-month-date-id task w/ toggle",
            "text": {
              "content": "pattern-month-date-id task w/ toggle",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "toggle",
    },
  ],
}
`;

exports[`lib/notion/add-year > appends blocks in the drop zone based on the year template patterns and year extras > drop-zone-1-nested 1`] = `
{
  "children": [
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "blocks-from-toggle-id task",
            "text": {
              "content": "blocks-from-toggle-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/add-year > appends blocks in the drop zone based on the year template patterns and year extras > drop-zone-2 1`] = `
{
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "February",
            "text": {
              "content": "February",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 2/1",
            "text": {
              "content": "Wed, 2/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 2/10",
            "text": {
              "content": "Fri, 2/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 2/22",
            "text": {
              "content": "Wed, 2/22",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Another task",
            "text": {
              "content": "Another task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Thu, 2/23",
            "text": {
              "content": "Thu, 2/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "March",
            "text": {
              "content": "March",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 3/1",
            "text": {
              "content": "Wed, 3/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Has a subtask",
            "text": {
              "content": "Has a subtask",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/add-year > appends blocks in the drop zone based on the year template patterns and year extras > drop-zone-2-nested 1`] = `
{
  "children": [
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "blocks-from-nested-id task",
            "text": {
              "content": "blocks-from-nested-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/add-year > appends blocks in the drop zone based on the year template patterns and year extras > drop-zone-3 1`] = `
{
  "children": [
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Event after subtask",
            "text": {
              "content": "Event after subtask",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 3/5",
            "text": {
              "content": "Sun, 3/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 3/10",
            "text": {
              "content": "Fri, 3/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "April",
            "text": {
              "content": "April",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 4/1",
            "text": {
              "content": "Sat, 4/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 4/10",
            "text": {
              "content": "Mon, 4/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 4/23",
            "text": {
              "content": "Sun, 4/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "May",
            "text": {
              "content": "May",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 5/1",
            "text": {
              "content": "Mon, 5/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 5/5",
            "text": {
              "content": "Fri, 5/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 5/10",
            "text": {
              "content": "Wed, 5/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "June",
            "text": {
              "content": "June",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Thu, 6/1",
            "text": {
              "content": "Thu, 6/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 6/10",
            "text": {
              "content": "Sat, 6/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 6/23",
            "text": {
              "content": "Fri, 6/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "July",
            "text": {
              "content": "July",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 7/1",
            "text": {
              "content": "Sat, 7/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 7/5",
            "text": {
              "content": "Wed, 7/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 7/10",
            "text": {
              "content": "Mon, 7/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "August",
            "text": {
              "content": "August",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 8/1",
            "text": {
              "content": "Tue, 8/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Thu, 8/10",
            "text": {
              "content": "Thu, 8/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 8/23",
            "text": {
              "content": "Wed, 8/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "September",
            "text": {
              "content": "September",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 9/1",
            "text": {
              "content": "Fri, 9/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 9/5",
            "text": {
              "content": "Tue, 9/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 9/10",
            "text": {
              "content": "Sun, 9/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 9/20",
            "text": {
              "content": "Wed, 9/20",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-date-id task",
            "text": {
              "content": "pattern-multiple-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "October",
            "text": {
              "content": "October",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 10/1",
            "text": {
              "content": "Sun, 10/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 10/10",
            "text": {
              "content": "Tue, 10/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 10/23",
            "text": {
              "content": "Mon, 10/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "November",
            "text": {
              "content": "November",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 11/1",
            "text": {
              "content": "Wed, 11/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-id task",
            "text": {
              "content": "pattern-odd-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 11/5",
            "text": {
              "content": "Sun, 11/5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-odd-months-date-id task",
            "text": {
              "content": "pattern-odd-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 11/10",
            "text": {
              "content": "Fri, 11/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "December",
            "text": {
              "content": "December",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 12/1",
            "text": {
              "content": "Fri, 12/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-id task",
            "text": {
              "content": "pattern-even-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-id task",
            "text": {
              "content": "pattern-every-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 12/10",
            "text": {
              "content": "Sun, 12/10",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-every-month-date-id task",
            "text": {
              "content": "pattern-every-month-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 12/23",
            "text": {
              "content": "Sat, 12/23",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-even-months-date-id task",
            "text": {
              "content": "pattern-even-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/add-year > handles months that have no quests and lack of extras > drop-zone-1 1`] = `
{
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "January",
            "text": {
              "content": "January",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 1/1",
            "text": {
              "content": "Sun, 1/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-month-id task",
            "text": {
              "content": "pattern-month-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 1/20",
            "text": {
              "content": "Fri, 1/20",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-date-id task",
            "text": {
              "content": "pattern-multiple-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "April",
            "text": {
              "content": "April",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 4/1",
            "text": {
              "content": "Sat, 4/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "July",
            "text": {
              "content": "July",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 7/1",
            "text": {
              "content": "Sat, 7/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "September",
            "text": {
              "content": "September",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 9/20",
            "text": {
              "content": "Wed, 9/20",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-date-id task",
            "text": {
              "content": "pattern-multiple-months-date-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "",
            "text": {
              "content": "",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "annotations": {
              "bold": true,
            },
            "plain_text": "October",
            "text": {
              "content": "October",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 10/1",
            "text": {
              "content": "Sun, 10/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "pattern-multiple-months-id task",
            "text": {
              "content": "pattern-multiple-months-id task",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;
